# turbulence

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AUDIT.md  BestPractices.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  MixingEfficiency.md  README.md  SURVEY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ARCTERX/: perturb.yaml
docs/: ARCHITECTURE.md  DATA_FLOW.md  PERTURB_PLAN.md  PYTURB_CLI.md  atomix_benchmark.md  best_practices.md  bibliography.md  chi_mathematics.md  cli.md  configuration.md  epsilon_mathematics.md  installation.md  mixing_efficiency.md  output_directories.md  pipeline.md  python_api.md
docs/audits/: 2026-06-19-deep-audit-findings.json  2026-06-19-deep-audit-round2-findings.json  2026-06-19-deep-audit-round2.md  2026-06-19-deep-audit.md  2026-06-25-deep-audit-findings.json  2026-06-25-deep-audit.md  2026-06-25-multiround-PARTIAL-summary.md  2026-06-25-multiround-RAW-partial.json  2026-06-26-multiround-verified-findings.json  2026-06-26-multiround-verified.md  2026-07-01-deep-audit-findings.json  2026-07-01-deep-audit.md  2026-07-01-remediation-log.md
docs/chi/: chi_comparison.md
docs/perturb/: PERTURB_PLAN.md  PLOTTING_REDESIGN_PLAN.md  cli.md  configuration.md  dissipation_length.md  logging.md  modules.md  parallel.md  pipeline.md  plotting.md  pyturb_comparison.md
docs/pyturb/: PYTURB_CLI.md  comparison.md  pyturb_upstream_harvest_plan.md
docs/rsi-tpw/: bench.md  cli.md  completion.md  configuration.md  legacy_v1.md  output_directories.md  pipeline.md  python_api.md  sensors.md  vectorization.md
docs/scor160/: cli.md
examples/: sections.yaml
examples/arcterx_2025_interior/: perturb.yaml  sections.yaml
matlab/: MATLAB.md  batchelor_gradT.m  batchelor_wavenumber.m  chi_method1.m  chi_method2.m  example00.m  fp07_time_constant.m  fp07_transfer.m  generate_all_channels_nc.m  generate_for_tests.m  generate_odas_p2mat_nc.m  generate_scalar_spectra_mats.m  generate_scalar_spectra_nc.m  generate_validation_mats.m  generate_validation_nc.m  get_chi.m  kraichnan_gradT.m  plot_spectra.m  tpw_plot_spectra.m
microstructure_sensors/: README.md  shear_sensitivities.csv
papers/: README.md
papers/anisotropy/: README.md
papers/chi-thermal/: README.md
papers/epsilon-shear/: README.md
papers/gliders-and-platforms/: README.md
papers/mixing-efficiency/: README.md
papers/overturns-thorpe/: README.md
papers/rockland-technical-notes/: README.md
papers/spectra-and-sensor-response/: README.md
papers/stratified-turbulence-anisotropy/: README.md
scripts/: compare_allch.py  compare_atomix.py  compare_chi_methods.py  compare_pyturb.py  generate_comparison_md.py
src/chi_tpw/: __init__.py  chi.py  fp07.py
src/microstructure_tpw/: __init__.py
src/microstructure_tpw/chi/: __init__.py  chi.py
src/microstructure_tpw/perturb/: __init__.py  cli.py  combo.py  config.py  ct_align.py  ctd.py  epsilon_combine.py  fp07_cal.py  merge.py  pipeline.py  trim.py
src/microstructure_tpw/rsi/: __init__.py  chi_io.py  cli.py  convert.py  deconvolve.py  diss_look.py  dissipation.py  helpers.py  p_file.py  profile.py  quick_look.py  viewer_base.py  window.py
src/microstructure_tpw/scor160/: __init__.py  cli.py  compare.py  goodman.py  io.py  l2.py  l3.py  l4.py
src/odas_tpw/: __init__.py  _completion.py  config_base.py
src/odas_tpw/chi/: __init__.py  batchelor.py  chi.py  fp07.py  l2_chi.py  l3_chi.py  l4_chi.py
src/odas_tpw/perturb/: __init__.py  _nc_writer.py  adcp.py  atomic_io.py  binning.py  bottom.py  cli.py  combo.py  config.py  ct_align.py  ctd.py  epsilon_combine.py  fp07_cal.py  gps.py  hotel.py  logging_setup.py  merge.py  mk_sections.py  netcdf_schema.py  pipeline.py  qc_gate.py  qc_rules.py  resolve.py  seawater.py  speed.py  top_trim.py  trim.py
src/odas_tpw/processing/: __init__.py  bottom.py  chi_combine.py  ct_align.py  epsilon_combine.py  mixing.py  probe_consistency.py  thorpe.py  top_trim.py
src/odas_tpw/pyturb/: __init__.py  __main__.py  _compat.py  _profind.py  bin.py  cli.py  eps.py  merge.py  p2nc.py
src/odas_tpw/rsi/: __init__.py  adapter.py  bench.py  binning.py  channels.py  cli.py  (+23 more)
src/perturb/: __init__.py  binning.py  bottom.py  cli.py  combo.py  config.py  ctd.py  discover.py  epsilon_combine.py  fp07_cal.py  gps.py  hotel.py  merge.py  pipeline.py  seawater.py  top_trim.py  trim.py
src/rsi_python/: __init__.py  batchelor.py  channels.py  chi.py  chi_io.py  cli.py  config.py  convert.py  deconvolve.py  despike.py  diss_look.py  dissipation.py  fp07.py  goodman.py  helpers.py  nasmyth.py  ocean.py  p_file.py  profile.py  quick_look.py  scalar_spectra.py  shear_noise.py  spectral.py  viewer_base.py  window.py
src/rsktools/: __init__.py  channels.py  cli.py  convert.py  despike.py  dissipation.py  goodman.py  ocean.py  p_file.py  profile.py
src/scor160/: __init__.py  cli.py  compare.py  io.py  l2.py  l3.py  l4.py
src/scor160_tpw/: __init__.py  cli.py  compare.py  goodman.py  io.py  l2.py  l3.py  l4.py
tests/: conftest.py  test_adapter.py  test_atomix_l3l4_gate.py  test_audit_2026_06_25_fixes.py  test_audit_2026_06_26_fixes.py  test_audit_2026_06_26_minors.py  test_audit_2026_06_26_review_fixes.py  test_audit_2026_07_robustness.py  test_bench.py  test_binning_combine.py  test_channels.py  test_chi.py  test_chi_io_spec_batch.py  test_cli.py  test_completion.py  test_config.py  test_config_patch.py  test_config_shared.py  test_convert.py  test_deconvolve.py  test_dissipation.py  test_easy_batch_branches.py  test_edge_cases.py  test_epsilon.py  test_final_95_branches.py  test_fp07_nc_calibration.py  test_glider_defaults.py  test_hard_batch_branches.py  test_l2_chi.py  test_l4_chi_guards.py  test_matlab_all_files.py  test_matlab_chi.py  test_matlab_epsilon.py  test_matlab_validation.py  test_medium_batch_branches.py  test_mr_e2e.py  test_old_format_casper.py  test_p_file.py  test_p_file_branches.py  test_p_file_corrupt.py  (+86 more)
tests/data/: MR_SL435.p  MR_SL685_climb.p  VMP142_bench.p  VMP142_startup_noclock.p  v6_golden_converted.npz
(+41 files in other folders)
