[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "microstructure-tpw"
version = "0.3.0"
description = "Ocean microstructure turbulence processing: TKE dissipation and chi from Rockland Scientific instruments"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [
    { name = "Pat Welch", email = "pat@mousebrains.com" },
]
keywords = ["oceanography", "turbulence", "microprofiler", "rockland"]
dependencies = [
    "numpy>=1.26,<3",
    "netCDF4>=1.6,<2",
    "scipy>=1.12,<2",
    "xarray>=2024.1",
    "gsw>=3.6,<4",
    "ruamel.yaml>=0.18",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/mousebrains/turbulence"

[project.scripts]
rsi-tpw = "microstructure_tpw.rsi.cli:main"
perturb = "microstructure_tpw.perturb.cli:main"
scor160-tpw = "microstructure_tpw.scor160.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "microstructure_tpw.rsi.spectral",
    "microstructure_tpw.rsi.ocean",
    "microstructure_tpw.rsi.nasmyth",
    "microstructure_tpw.rsi.deconvolve",
    "microstructure_tpw.rsi.profile",
    "microstructure_tpw.rsi.helpers",
    "microstructure_tpw.rsi.convert",
    "microstructure_tpw.chi.batchelor",
    "microstructure_tpw.chi.fp07",
    "microstructure_tpw.chi.chi",
    "microstructure_tpw.scor160.io",
    "microstructure_tpw.scor160.l2",
    "microstructure_tpw.scor160.spectral",
    "microstructure_tpw.scor160.ocean",
    "microstructure_tpw.scor160.nasmyth",
]
# npt.ArrayLike causes many false positives with arithmetic/indexing;
# no-any-return from numpy arithmetic expressions returning Any
disable_error_code = ["operator", "index", "arg-type", "return-value", "no-any-return", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "matlab: MATLAB/ODAS comparison tests (use -n auto to parallelize)",
]
