[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "microstructure-tpw"
version = "0.3.0"
description = "Ocean microstructure turbulence processing: TKE dissipation and chi from Rockland Scientific instruments"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [
    { name = "Pat Welch", email = "pat@mousebrains.com" },
]
keywords = ["oceanography", "turbulence", "microprofiler", "rockland"]
dependencies = [
    "numpy>=1.26,<3",
    "netCDF4>=1.6,<2",
    "scipy>=1.12,<2",
    "xarray>=2024.1",
    "gsw>=3.6,<4",
    "ruamel.yaml>=0.18",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/mousebrains/turbulence"

[project.scripts]
rsi-tpw = "odas_tpw.rsi.cli:main"
perturb = "odas_tpw.perturb.cli:main"
scor160-tpw = "odas_tpw.scor160.cli:main"
pyturb-cli = "odas_tpw.pyturb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "odas_tpw.rsi.spectral",
    "odas_tpw.rsi.ocean",
    "odas_tpw.rsi.nasmyth",
    "odas_tpw.rsi.deconvolve",
    "odas_tpw.rsi.profile",
    "odas_tpw.rsi.helpers",
    "odas_tpw.rsi.convert",
    "odas_tpw.chi.batchelor",
    "odas_tpw.chi.fp07",
    "odas_tpw.chi.chi",
    "odas_tpw.scor160.io",
    "odas_tpw.scor160.l2",
    "odas_tpw.scor160.spectral",
    "odas_tpw.scor160.ocean",
    "odas_tpw.scor160.nasmyth",
]
# npt.ArrayLike causes many false positives with arithmetic/indexing;
# no-any-return from numpy arithmetic expressions returning Any
disable_error_code = ["operator", "index", "arg-type", "return-value", "no-any-return", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "matlab: MATLAB/ODAS comparison tests (use -n auto to parallelize)",
]
filterwarnings = [
    "ignore:get_diss\\(\\) is deprecated:DeprecationWarning",
    "ignore:get_chi\\(\\) is deprecated:DeprecationWarning",
]
