[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "microstructure-tpw"
version = "0.3.1"
description = "Ocean microstructure turbulence processing: TKE dissipation and chi from Rockland Scientific instruments"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [
    { name = "Pat Welch", email = "pat@mousebrains.com" },
]
keywords = ["oceanography", "turbulence", "microprofiler", "rockland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.0,<3",  # np.trapezoid (used across chi/epsilon L4) is NumPy 2.0+
    "netCDF4>=1.6,<2",
    "scipy>=1.12,<2",
    "xarray>=2024.1",
    "gsw>=3.6,<4",
    "ruamel.yaml>=0.18",
    "matplotlib>=3.8,<4",
    "cmocean>=3.0,<5",
]

[project.optional-dependencies]
# Reading Rockland shear-probe calibration PDFs (rsi-tpw sensors --cal-dir).
cal = [
    "pypdf>=4",
]
# Shell tab-completion for the argparse CLIs (rsi-tpw, perturb, perturb-plot,
# perturb-diag). See docs/rsi-tpw/completion.md.
completion = [
    "argcomplete>=3",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "pre-commit",
    "pypdf>=4",  # so the calibration-sheet tests run in CI
    "argcomplete>=3",  # so the tab-completion tests run in CI
]

[project.urls]
Homepage = "https://github.com/mousebrains/turbulence"
Repository = "https://github.com/mousebrains/turbulence"
Documentation = "https://github.com/mousebrains/turbulence/tree/main/docs"
Changelog = "https://github.com/mousebrains/turbulence/blob/main/CHANGELOG.md"
Issues = "https://github.com/mousebrains/turbulence/issues"

[project.scripts]
rsi-tpw = "odas_tpw.rsi.cli:main"
perturb = "odas_tpw.perturb.cli:main"
perturb-plot = "odas_tpw.perturb.plot.cli:main"
perturb-diag = "odas_tpw.perturb.diag.cli:main"
scor160-tpw = "odas_tpw.scor160.cli:main"
pyturb-cli = "odas_tpw.pyturb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"odas_tpw.perturb.plot" = ["presets/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Drop stale rsi.spectral/ocean/nasmyth entries: those modules never existed
# under rsi/ (consolidated into scor160.*); mypy silently no-op'd the override.
module = [
    "odas_tpw.rsi.deconvolve",
    "odas_tpw.rsi.profile",
    "odas_tpw.rsi.helpers",
    "odas_tpw.rsi.convert",
    "odas_tpw.chi.batchelor",
    "odas_tpw.chi.fp07",
    "odas_tpw.chi.chi",
    "odas_tpw.scor160.io",
    "odas_tpw.scor160.l2",
    "odas_tpw.scor160.spectral",
    "odas_tpw.scor160.ocean",
    "odas_tpw.scor160.nasmyth",
]
# npt.ArrayLike causes many false positives with arithmetic/indexing;
# no-any-return from numpy arithmetic expressions returning Any
disable_error_code = ["operator", "index", "arg-type", "return-value", "no-any-return", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:get_diss\\(\\) is deprecated:DeprecationWarning",
    "ignore:get_chi\\(\\) is deprecated:DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------
# Branch coverage catches half-tested if/else blocks that line coverage misses.
# Interactive matplotlib viewers and module entry points are omitted — see
# CONTRIBUTING.md "Coverage policy" for the rationale.

[tool.coverage.run]
branch = true
source = ["src/odas_tpw"]
omit = [
    # Module entry points: re-dispatch to .cli:main, nothing testable.
    "*/__main__.py",
    # Interactive matplotlib viewers (button widgets, draw callbacks,
    # event-driven UI).  Tested manually; covering them headlessly would
    # require fragile event simulation for marginal value.
    "src/odas_tpw/rsi/viewer_base.py",
    "src/odas_tpw/rsi/quick_look.py",
    "src/odas_tpw/rsi/diss_look.py",
]

[tool.coverage.report]
# Lines matching any pattern are dropped from the report even when measured.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "raise AssertionError",
]
# Floor for the CI gate.  Bumped up as the coverage plan progresses
# (see docs/coverage_plan.md).  Initial value sits ~3 pts under the
# post-omit branch-coverage baseline so a fresh CI run stays green.
fail_under = 85
show_missing = true
skip_covered = false
